fix: add overflow: hidden for body when burger menu is opened

--- a/shelter/styles/style.css
+++ b/shelter/styles/style.css
@@ -695,6 +695,10 @@ p {
         column-gap: 20px;
     }
 
+    body.active {
+        overflow: hidden;
+    }
+
     .header.active .header__logo  {
         animation: moveLogo 2s forwards;
     }
